Category thumbnail layout bug

--- a/wp-content/themes/Pim/css/app.css
+++ b/wp-content/themes/Pim/css/app.css
@@ -220,6 +220,7 @@ ul.thumbnails li.span12 + li {
 #search .thumbnail:hover, #category .thumbnail:hover{ border-color:rgba(82, 168, 236, 0.8);outline:0;outline:thin dotted \9;-webkit-box-shadow:inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);-moz-box-shadow:inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);box-shadow:inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);}
 
 div.clickable{
+	height: 355px;
 	position: relative;
 }
 
